--- a/app/riskmanagement.risks/webapp/manifest.json
+++ b/app/riskmanagement.risks/webapp/manifest.json
@@ -17,7 +17,7 @@
     },
     "dataSources": {
       "mainService": {
-        "uri": "/service/RiskManagementService/",
+        "uri": "service/RiskManagementService/",
         "type": "OData",
         "settings": {
           "annotations": [],
@@ -137,5 +137,9 @@
   "sap.fiori": {
     "registrationIds": [],
     "archeType": "transactional"
+  },
+  "sap.cloud": {
+    "public": true,
+    "service": "lcap.RiskManagement"
   }
 }
